[package]
name = "dndtools"
version = "0.1.0"
authors = ["Josh Wright <wright.jjw@gmail.com>"]
edition = "2018"
description = "Various CLI tools and library for D&D 5e"
documentation = "https://docs.rs/dndtools"
repository = "https://github.com/wrightjjw/dndtools"
license = "GPL-3.0"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
getopts = "0.2"
rayon = "1.5"
num_cpus = "1.13"
